fixed navbar because it wasn't collapsing, and added media css to change font alignment when on a phone

--- a/style.css
+++ b/style.css
@@ -4,3 +4,20 @@
 footer {
     text-align: center;
 }
+@media screen and (max-width: 768px) {
+    body {
+      text-align: left;
+    }
+    .wrapper {
+      width: 600px;
+    }
+  }
+
+  @media screen and (max-width: 640px) {
+    body {
+      text-align: center;
+    }
+    .wrapper {
+      width: 600px;
+    }
+  }
